# fastapi_rag_service

./: Dockerfile  Makefile  README.md  docker-compose.local.yml  pyproject.toml
app/: config.py  main.py
app/api/: application_api.py  containers.py
app/api/common/: health.py  root.py
app/api/v1/: api.py
app/api/v1/endpoints/: classify.py
app/da_log/: __init__.py  events.py  logger.py
app/estimators/: classifiers.py  loaders.py
app/preprocesses/: preprocesses.py
app/schemas/: categories.py  censor.py  classify.py  hello.py  indexes.py  intent_classifier.py  rag.py  root.py  search.py
app/schemas/common/: documents.py  estimators_dto.py
app/services/: answer_templates_storage.py  classify_service.py  hasher.py  llm_providers.py  multi_classifiaction.py  prompt_service.py  search_service.py  vectorization_service.py
app/services/redis/: redis_init_pool.py  redis_service.py
app/strategies/: strategies.py
app/utils/: constants.py  exceptions.py  types.py  utils.py
app/utils/preprocess/: preprocess_regex.py  preprocessing.py
configs/: log_cfg.yaml  settings.toml
requirements/: requirements-dev.txt  requirements.txt
